# parampilot-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  pytest.toml
.github/workflows/: ci.yml
contracts/: operation-coverage.json  programmatic-openapi.json  public-source-allowlist.txt  release-compatibility.json  runtime-dependency-review.json
docs/: quickstart.md  release-and-compatibility.md  workflows-and-recovery.md
examples/: __init__.py  async_explicit_training_workflow.py  sync_explicit_training_workflow.py
parampilot_codegen/: __init__.py  __main__.py  artifacts.py  configuration.py  coverage.py  exports.py  generation.py  manifest.py  normalization.py  operations.py
parampilot_release/: __init__.py  __main__.py  audit.py  cli.py  configuration.py  dependency_scanning.py  errors.py  extraction.py  git_source.py  hashing.py  lock_artifacts.py  manifest.py  models.py  scanning.py
src/parampilot/: __init__.py  _version.py  async_workflow_runtime.py  async_workflow_stages.py  compatibility.py  configuration.py  download_metadata.py  downloads.py  error_mapping.py  errors.py  import_validation.py  job_handles.py  operations.py  pagination.py  raw_response.py  responses.py  serialization.py  sync_downloads.py  sync_workflow_runtime.py  sync_workflow_stages.py  sync_workflows.py  types.py  workflow_errors.py  workflow_models.py  workflow_support.py  workflows.py
tests/: __init__.py  support.py
tests/contract/: test_campaign_model_semantics.py  test_distribution_artifacts.py  test_generation_pipeline.py  test_job_model_semantics.py  test_model_semantics.py  test_operation_coverage.py  test_package_contract.py
tests/examples/: __init__.py  test_documentation_safety.py  test_explicit_workflow_examples.py
tests/jobs/: __init__.py  test_async_job_resources.py  test_async_waiter_state_machine.py  test_job_handles.py  test_job_resources.py  test_waiter_failures.py  test_waiter_state_machine.py  waiter_support.py
tests/release/: __init__.py  clean_wheel_probe.py  conftest.py  support.py  test_allowlist_validation.py  test_content_scanning.py  test_dependency_scanning.py  test_public_audit.py  test_public_extraction.py  test_release_cli.py  test_release_metadata.py
tests/resources/: operation_calls.py  sync_operation_calls.py  test_async_operation_coverage.py  test_async_pagination.py  test_async_resources.py  test_async_streaming.py  test_sync_operation_coverage.py  test_sync_pagination.py  test_sync_resources.py  test_sync_streaming.py
(+59 files in other folders)
