[project]
name = "parampilot"
version = "0.1.0"
description = "Typed synchronous and asynchronous Python SDK for the ParamPilot API"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Julian Kimmig" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1,<1",
    "pydantic>=2.12,<3",
]

[project.urls]
Documentation = "https://github.com/JulianKimmig/parampilot-python#readme"
Issues = "https://github.com/JulianKimmig/parampilot-python/issues"
Source = "https://github.com/JulianKimmig/parampilot-python"

[build-system]
requires = ["hatchling>=1.31,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parampilot"]

[tool.hatch.build.targets.sdist]
include = [
    "/.gitignore",
    "/.github",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/contracts",
    "/docs",
    "/examples",
    "/LICENSE",
    "/NOTICE",
    "/parampilot_codegen",
    "/parampilot_release",
    "/README.md",
    "/SECURITY.md",
    "/pyproject.toml",
    "/pytest.toml",
    "/src/parampilot",
    "/tests",
    "/uv.lock",
]

[dependency-groups]
dev = [
    "datamodel-code-generator==0.68.1",
    "hatchling>=1.31,<2",
    "mypy==2.3.0",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4,<2",
    "ruff==0.15.21",
    "tomli>=2.2,<3",
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    "src/parampilot/generated",
    "src/parampilot/models/__init__.pyi",
]

[tool.ruff.lint]
select = ["ASYNC", "B", "D", "E", "F", "I", "S", "UP"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S603", "S607"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/parampilot", "parampilot_codegen", "parampilot_release", "examples"]
exclude = ["^src/parampilot/generated/", "^src/parampilot/models/__init__\\.pyi$"]
plugins = ["pydantic.mypy"]
